--- a/gtk-3.0/widgets/_notebooks.scss
+++ b/gtk-3.0/widgets/_notebooks.scss
@@ -225,16 +225,6 @@ notebook {
         // FIXME: generalize .small-button?
         min-width: 20px;
         min-height: 20px;
-
-        &:last-child {
-          margin-left: 4px;
-          margin-right: -4px;
-        }
-
-        &:first-child {
-          margin-left: -4px;
-          margin-right: 4px;
-        }
       }
     }
 
